.infra/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jboss-helloworld-service
spec:
  selector:
    app: jboss-app
  ports:
    - port: 8080
      targetPort: 8080
